--- a/de.hab.ev3plugin/plugin.xml
+++ b/de.hab.ev3plugin/plugin.xml
@@ -4075,6 +4075,12 @@
          point="org.eclipse.cdt.core.templates">
       <template
             filterPattern=".*g\+\+"
+            id="ilg.gnuarmeclipse.managedbuild.cross.templates.Modern_EV3_CXX_Project"
+            location="$nl$/templates/projecttemplates/Modern_EV3_CXX_Project/template.xml"
+            projectType="org.eclipse.cdt.build.core.buildArtefactType.exe">
+      </template>
+      <template
+            filterPattern=".*g\+\+"
             id="ilg.gnuarmeclipse.managedbuild.cross.templates.HelloWorld_EV3_CXX_Project"
             location="$nl$/templates/projecttemplates/HelloWorld_EV3_CXX_Project/template.xml"
             projectType="org.eclipse.cdt.build.core.buildArtefactType.exe">
