--- a/de.hab.ev3plugin/plugin.xml
+++ b/de.hab.ev3plugin/plugin.xml
@@ -4081,6 +4081,12 @@
       </template>
       <template
             filterPattern=".*g\+\+"
+            id="ilg.gnuarmeclipse.managedbuild.cross.templates.EV3_CXX_WRO_Project"
+            location="$nl$/templates/projecttemplates/EV3_CXX_WRO_Project/template.xml"
+            projectType="org.eclipse.cdt.build.core.buildArtefactType.exe">
+      </template>
+      <template
+            filterPattern=".*g\+\+"
             id="ilg.gnuarmeclipse.managedbuild.cross.templates.HelloWorld_EV3_CXX_Project"
             location="$nl$/templates/projecttemplates/HelloWorld_EV3_CXX_Project/template.xml"
             projectType="org.eclipse.cdt.build.core.buildArtefactType.exe">
