--- a/de.hab.ev3plugin/.project
+++ b/de.hab.ev3plugin/.project
@@ -3,8 +3,19 @@
 	<name>de.hab.ev3plugin</name>
 	<comment></comment>
 	<projects>
+		<project>API</project>
 	</projects>
 	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
+			<triggers>full,incremental,</triggers>
+			<arguments>
+				<dictionary>
+					<key>LaunchConfigHandle</key>
+					<value>&lt;project&gt;/.externalToolBuilders/API_Builder.launch</value>
+				</dictionary>
+			</arguments>
+		</buildCommand>
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
